added API function for wiping devices
